--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = Onyx/vendor/glm
 	url = https://github.com/g-truc/glm.git
 	
+[submodule "Onyx/vendor/imgui"]
+	path = Onyx/vendor/imgui
+	url = https://github.com/ocornut/imgui.git
