--- a/Onyx-sandbox/imgui.ini
+++ b/Onyx-sandbox/imgui.ini
@@ -4,19 +4,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=25,23
-Size=609,680
+Pos=255,457
+Size=833,263
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][About Dear ImGui]
 Pos=636,23
 Size=605,680
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Log]
+Pos=0,19
+Size=247,701
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Example: Console]
+Pos=1090,1
+Size=190,719
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=0,0
+Size=253,720
+Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=111,132 Size=1216,680 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=275,680 Selected=0xE927CF2F
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=273,680 Selected=0x34B4C494
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=253,701
+  DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=1025,701 Split=Y
+    DockNode  ID=0x00000004 Parent=0x0000000A SizeRef=1280,351 CentralNode=1
+    DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=1280,348
 
