--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/Onyx-sandbox/res/audio/borhap.wav
+/Onyx-sandbox/res/audio/theringer1.wav
+/Onyx-sandbox/res/audio/theringer.wav
