--- a/Onyx-sandbox/onyx-sandbox.vcxproj
+++ b/Onyx-sandbox/onyx-sandbox.vcxproj
@@ -153,10 +153,12 @@
   <ItemGroup>
     <None Include="res\shaders\FlatColor.glsl" />
     <None Include="res\shaders\Texture.glsl" />
+    <None Include="res\shaders\vulkantest\compile.bat" />
+    <None Include="res\shaders\vulkantest\glslc.exe" />
+    <None Include="res\shaders\vulkantest\vkfrag.frag" />
     <None Include="res\shaders\vulkantest\vkfrag.spv" />
-    <None Include="res\shaders\vulkantest\vkvert.glsl" />
-    <None Include="res\shaders\vulkantest\vkfrag.glsl" />
     <None Include="res\shaders\vulkantest\vkvert.spv" />
+    <None Include="res\shaders\vulkantest\vkvert.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
