--- a/Onyx/onyx.vcxproj
+++ b/Onyx/onyx.vcxproj
@@ -25,7 +25,7 @@
     <ClCompile Include="src\Onyx\graphics\Buffer.cpp" />
     <ClCompile Include="src\Onyx\Graphics\OrthographicCamera.cpp" />
     <ClCompile Include="src\Onyx\Graphics\OrthographicCameraController.cpp" />
-    <ClCompile Include="src\Onyx\graphics\Renderer2D.cpp" />
+    <ClCompile Include="src\Onyx\Graphics\Renderer2D.cpp" />
     <ClCompile Include="src\Onyx\Graphics\RendererAPI.cpp" />
     <ClCompile Include="src\Onyx\graphics\Shader.cpp" />
     <ClCompile Include="src\Onyx\Graphics\Texture.cpp" />
@@ -35,6 +35,7 @@
     <ClCompile Include="src\Platform\OpenAL\OpenALSound.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLGraphicsContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRenderer2D.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
