--- a/Onyx-sandbox/onyx-sandbox.vcxproj.filters
+++ b/Onyx-sandbox/onyx-sandbox.vcxproj.filters
@@ -24,12 +24,13 @@
     <None Include="res\shaders\vulkantest\vkfrag.frag" />
     <None Include="res\shaders\vulkantest\vkvert.vert" />
     <None Include="res\shaders\Texture.glsl" />
+    <None Include="res\shaders\basic.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Sandbox2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Sandbox2DSecond.h">
+    <ClInclude Include="src\Sandbox3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -40,7 +41,7 @@
     <ClCompile Include="src\SandboxApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Sandbox2DSecond.cpp">
+    <ClCompile Include="src\Sandbox3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
