--- a/Onyx-sandbox/onyx-sandbox.vcxproj.filters
+++ b/Onyx-sandbox/onyx-sandbox.vcxproj.filters
@@ -23,8 +23,8 @@
     <None Include="res\shaders\vulkantest\glslc.exe" />
     <None Include="res\shaders\vulkantest\vkfrag.frag" />
     <None Include="res\shaders\vulkantest\vkvert.vert" />
-    <None Include="res\shaders\Texture.glsl" />
-    <None Include="res\shaders\basic.glsl" />
+    <None Include="res\shaders\3DTest.glsl" />
+    <None Include="res\shaders\2DQuad.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Sandbox2D.h">
