Began work on ECS

--- a/Onyx-sandbox/onyx-sandbox.vcxproj
+++ b/Onyx-sandbox/onyx-sandbox.vcxproj
@@ -156,10 +156,13 @@
   <ItemGroup>
     <None Include="res\models\Cube.fbx" />
     <None Include="res\models\Lantern.fbx" />
+    <None Include="res\models\Monkey.fbx" />
     <None Include="res\models\Plane.fbx" />
     <None Include="res\models\Teapot.FBX" />
     <None Include="res\shaders\3DTest.glsl" />
     <None Include="res\shaders\2DQuad.glsl" />
+    <None Include="res\shaders\FlatColor.glsl" />
+    <None Include="res\shaders\Texture.glsl" />
     <None Include="res\shaders\vulkantest\compile.bat" />
     <None Include="res\shaders\vulkantest\glslc.exe" />
     <None Include="res\shaders\vulkantest\vkfrag.frag" />
