--- a/Onyx-sandbox/onyx-sandbox.vcxproj.filters
+++ b/Onyx-sandbox/onyx-sandbox.vcxproj.filters
@@ -29,6 +29,9 @@
     <None Include="res\models\Plane.fbx" />
     <None Include="res\models\Lantern.fbx" />
     <None Include="res\models\Teapot.FBX" />
+    <None Include="res\models\Monkey.fbx" />
+    <None Include="res\shaders\FlatColor.glsl" />
+    <None Include="res\shaders\Texture.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Sandbox2D.h">
