--- a/Onyx/onyx.vcxproj
+++ b/Onyx/onyx.vcxproj
@@ -19,7 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Onyx\Scene\Entity.cpp" />
     <ClCompile Include="src\Onyx\Audio\Sound.cpp" />
     <ClCompile Include="src\Onyx\Audio\SoundManager.cpp" />
     <ClCompile Include="src\Onyx\core\Application.cpp" />
@@ -65,7 +64,10 @@
     <ClCompile Include="src\Platform\Vulkan\VulkanSwapchain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Onyx\Scene\Entity.h" />
+    <ClInclude Include="src\Onyx\ECS\Types.h" />
+    <ClInclude Include="src\Onyx\ECS\EntityRegistry.h" />
+    <ClInclude Include="src\Onyx\ECS\ComponentArray.h" />
+    <ClInclude Include="src\Onyx\Scene\Components.h" />
     <ClInclude Include="src\Onyx\Audio\Sound.h" />
     <ClInclude Include="src\Onyx\Audio\SoundManager.h" />
     <ClInclude Include="src\Onyx\core\Application.h" />
@@ -95,6 +97,7 @@
     <ClInclude Include="src\Onyx\Onyx.h" />
     <ClInclude Include="src\Onyx\core\Window.h" />
     <ClInclude Include="src\onyxpch.h" />
+    <ClInclude Include="src\Onyx\Scene\Entity.h" />
     <ClInclude Include="src\Onyx\Scene\Scene.h" />
     <ClInclude Include="src\Platform\OpenAL\OpenALDevice.h" />
     <ClInclude Include="src\Platform\OpenAL\OpenALSound.h" />
